# MLFST

./: .env.example  .gitignore  .replit  CONTRIBUTING.md  MANIFEST.in  Procfile  README.md  README_DEPLOY.md  app.py  app_cloud.py  app_cloud_ultralight.py  auth.py  database.py  dependencies.txt  entry.sh  evacuation_code.txt  evacuation_example.py  healthcheck.py  ml_firesafe.db  ml_utils.py  packages.txt  prepare_for_deploy.sh  proxy.py  pyproject.toml  pyproject.toml.backup1  pyproject.toml.bak  pyproject.toml.bk2  pyproject.toml.bk3  readme.txt  requirements-clean.txt  requirements-ultralight.txt  requirements.txt  restore_local_config.sh  setup.cfg  setup.py  streamlit_app.py  user_guide.html  utils.py  visualization.py
.streamlit/: config.toml  config_cloud.toml  secrets.toml  secrets_cloud.toml
attached_assets/: Pasted---1746347869982.txt  Pasted-ERROR-Exception-Traceback-most-recent-call-last-File-home-adminuser-venv-lib-python3--1746544366316.txt
data/: building_characteristics.csv  evacuation_stats.csv  fire_incidents.csv  sensor_readings.csv  weather_fire_correlation.csv
mlfiresafetytutor/: __init__.py  app.py  modules.py
modules/: __init__.py  ai_agents.py  data_prep.py  deep_learning.py  intro.py  model_eval.py  supervised.py  unsupervised.py
project_cleanup/: README.md  deployment_checklist.md  deployment_summary.md  file_cleanup.sh  local_vs_cloud.md  performance_optimization.md  port_and_healthcheck.md  port_configuration.md  proxy_solution.md  python312_compatibility.md  streamlit_cloud_deployment.md  streamlit_cloud_resource_limits.md  streamlit_deploy.md
streamlit_app/: __init__.py
