[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-safety-app"
version = "1.0.0"
authors = [
    {name = "FireSafety Team", email = "example@example.com"},
]
description = "Fire Safety ML Tutorial Application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.28.0",
    "pandas==2.0.3",
    "numpy==1.24.4",
    "matplotlib==3.7.3",
    "plotly==5.18.0",
    "scikit-learn==1.3.2",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "scipy==1.10.1",
    "seaborn==0.13.0",
    "anthropic==0.5.0",
    "openai==0.28.1",
]

[project.urls]
"Homepage" = "https://example.com"
"Bug Tracker" = "https://example.com/issues"

[tool.setuptools]
packages = []