[metadata]
name = mlfiresafetytutor
version = 0.1.0
description = ML FireSafetyTutor - Interactive platform for learning ML in fire safety applications
long_description = file: README.md
long_description_content_type = text/markdown
author = Author
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
include_package_data = True

[options.packages.find]
where = .
include = 
    mlfiresafetytutor
    mlfiresafetytutor.*
    modules
    modules.*